Correction de quelque syntaxe de code